# GMPcalc

./: CMakeLists.txt  LICENSE  README.md  calculator.cpp  calculator.h  calculator_form.cpp  calculator_form.h  calculator_form.ui  display.cpp  display.h  display_form.ui  main.cpp  mini-mpq.c  multidisplay.h  qcalc.cpp  qcalc.h  qcalcwidget.cpp  qcalcwidget.h
src/: calculator.cpp  calculator.h  calculator_form.ui  display.cpp  display.h  display_form.ui  main.cpp  mini-gmp.c  multidisplay.cpp  qcalc.cpp  qcalc.h  qcalcwidget.cpp  qcalcwidget.h
